fix error spacing for dispute/report scalar form when error from input

--- a/src/modules/common/less/form.less
+++ b/src/modules/common/less/form.less
@@ -18,6 +18,12 @@
   white-space: nowrap;
 }
 
+.Form__error__space {
+  &:extend(.Form__error);
+
+  margin-top: 0.5rem;
+}
+
 .Form__error--even {
   color: @color-negative;
   display: inline-block;
@@ -30,6 +36,7 @@
   white-space: nowrap;
 }
 
+.Form__error__space > svg,
 .Form__error--even > svg,
 .Form__error--field-50 > svg {
   margin: 0 0.2rem;
@@ -322,6 +329,7 @@ li.field--short {
 .Form__radio-buttons--per-line-long {
   &:extend(.Form__radio-buttons--per-line all);
 
+  margin-top: 1rem;
   white-space: nowrap;
   width: 18rem;
 }
